@@ -1,7 +1,8 @@
 package ru.vsu.cs.uvarov_d_p.oop.tests;
 
 import org.junit.Test;
-import ru.vsu.cs.uvarov_d_p.oop.linked_list.DoublyLinkedList;
+import ru.vsu.cs.uvarov_d_p.oop.linked_list.CircularLinkedList;
+import ru.vsu.cs.uvarov_d_p.oop.linked_list.Node;
 import ru.vsu.cs.uvarov_d_p.oop.linked_list.SimpleLinkedListException;
 
 import static org.junit.Assert.assertTrue;
@@ -9,18 +10,18 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 
-public class DoublyLinkedListTest {
+public class CircularLinkedListTest {
 
     @Test
     public void testEmptyList() {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         assertTrue(list.isEmpty());
         assertEquals(0, list.size());
     }
 
     @Test
     public void testAddFirst() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addFirst(1);
         list.addFirst(2);
 
@@ -31,18 +32,35 @@ public class DoublyLinkedListTest {
 
     @Test
     public void testAddLast() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(2);
 
         assertEquals(2, list.size());
-        assertEquals(1, (int) list.getFirst());
+        assertEquals(1,(int) list.getFirst());
         assertEquals(2, (int) list.getLast());
     }
 
     @Test
+    public void testCircularStructure() throws SimpleLinkedListException {
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        list.addLast(1);
+        list.addLast(2);
+        list.addLast(3);
+
+        assertEquals(1, (int) list.getFirst());
+        assertEquals(3, (int) list.getLast());
+
+        Node<Integer> lastNode = list.getItem(2);
+        assertEquals(list.getFirst(), lastNode.next.value);
+
+        Node<Integer> firstNode = list.getItem(0);
+        assertEquals(list.getLast(), firstNode.prev.value);
+    }
+
+    @Test
     public void testInsert() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(3);
         list.insert(1, 2);
@@ -55,7 +73,7 @@ public class DoublyLinkedListTest {
 
     @Test
     public void testRemoveFirst() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
@@ -63,23 +81,31 @@ public class DoublyLinkedListTest {
         assertEquals(1, (int) list.removeFirst());
         assertEquals(2, list.size());
         assertEquals(2, (int) list.getFirst());
+        assertEquals(3, (int) list.getLast());
+
+        assertEquals(list.getFirst(), list.getItem(1).prev.value);
+        assertEquals(list.getLast(), list.getItem(0).next.value);
     }
 
     @Test
     public void testRemoveLast() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
 
         assertEquals(3, (int) list.removeLast());
         assertEquals(2, list.size());
+        assertEquals(1, (int) list.getFirst());
         assertEquals(2, (int) list.getLast());
+
+        assertEquals(list.getFirst(), list.getItem(1).prev.value);
+        assertEquals(list.getLast(), list.getItem(0).next.value);
     }
 
     @Test
     public void testRemoveByIndex() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
@@ -91,20 +117,25 @@ public class DoublyLinkedListTest {
     }
 
     @Test
-    public void testGetByIndex() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
-        list.addLast(10);
-        list.addLast(20);
-        list.addLast(30);
+    public void testSingleElementCircular() throws SimpleLinkedListException {
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        list.addFirst(42);
 
-        assertEquals(10, (int) list.get(0));
-        assertEquals(20, (int) list.get(1));
-        assertEquals(30, (int) list.get(2));
+        assertEquals(1, list.size());
+        assertEquals(42, (int) list.getFirst());
+        assertEquals(42, (int) list.getLast());
+
+        Node<Integer> node = list.getItem(0);
+        assertEquals(node, node.next);
+        assertEquals(node, node.prev);
+
+        assertEquals(42, (int) list.removeFirst());
+        assertTrue(list.isEmpty());
     }
 
     @Test
     public void testContains() {
-        DoublyLinkedList<String> list = new DoublyLinkedList<>();
+        CircularLinkedList<String> list = new CircularLinkedList<>();
         list.addLast("apple");
         list.addLast("banana");
         list.addLast("orange");
@@ -116,7 +147,7 @@ public class DoublyLinkedListTest {
 
     @Test
     public void testClear() {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
@@ -128,7 +159,7 @@ public class DoublyLinkedListTest {
 
     @Test
     public void testIterator() {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
         list.addLast(2);
         list.addLast(3);
@@ -142,8 +173,26 @@ public class DoublyLinkedListTest {
     }
 
     @Test
+    public void testCircularIterator() {
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
+        list.addLast(1);
+        list.addLast(2);
+
+        int count = 0;
+        int sum = 0;
+        for (Integer value : list.circularIterator()) {
+            sum += value;
+            count++;
+            if (count >= 6) break;
+        }
+
+        assertEquals(9, sum);
+        assertEquals(6, count);
+    }
+
+    @Test
     public void testEmptyListExceptions() {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
 
         assertThrows(SimpleLinkedListException.class, list::getFirst);
         assertThrows(SimpleLinkedListException.class, list::getLast);
@@ -154,7 +203,7 @@ public class DoublyLinkedListTest {
 
     @Test
     public void testInvalidIndexExceptions() {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
         list.addLast(1);
 
         assertThrows(SimpleLinkedListException.class, () -> list.get(-1));
@@ -166,23 +215,8 @@ public class DoublyLinkedListTest {
     }
 
     @Test
-    public void testSingleElementList() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
-        list.addFirst(42);
-
-        assertEquals(1, list.size());
-        assertEquals(42, (int) list.getFirst());
-        assertEquals(42, (int) list.getLast());
-        assertEquals(42, (int) list.get(0));
-        assertTrue(list.contains(42));
-
-        assertEquals(42, (int) list.removeFirst());
-        assertTrue(list.isEmpty());
-    }
-
-    @Test
-    public void testMultipleOperations() throws SimpleLinkedListException {
-        DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
+    public void testComplexScenario() throws SimpleLinkedListException {
+        CircularLinkedList<Integer> list = new CircularLinkedList<>();
 
         for (int i = 0; i < 5; i++) {
             list.addLast(i);
@@ -197,6 +231,9 @@ public class DoublyLinkedListTest {
 
         list.addFirst(-1);
         assertEquals(-1, (int) list.getFirst());
+
+        assertEquals(list.getFirst(), list.getItem(4).next.value);
+        assertEquals(list.getLast(), list.getItem(0).prev.value);
 
         list.clear();
         assertTrue(list.isEmpty());
